src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__dashboard__tests__snapshot_grid_small_terminal_80x10.snap
---
source: src/commands/task/orchestrate/dashboard.rs
expression: snapshot
---
 W1   W2   W3   W4
╔ ▶ W1 [1.1: api] ═════════════════════════════════════════════════════════════╗
║● implement                                                                   ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
╚ $0.0000 │ ↓0 ↑0 ═════════════════════════════════════════════════════════════╝
 3/10 (30%) │ $0.0842 │ ⏱ 2m25s  q=quit Tab=switch p=tasks
