src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__dashboard__tests__snapshot_grid_terminal_120x40.snap
---
source: src/commands/task/orchestrate/dashboard.rs
expression: snapshot
---
╭ W1 [1.1: api] ───────────────────────────────────────────╮╔ ▶ W2 [2.1: core] ════════════════════════════════════════╗
│● implement                                               │║◎ review+fix                                              ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
│                                                          │║                                                          ║
╰ $0.0000 │ ↓0 ↑0 ─────────────────────────────────────────╯╚ $0.0000 │ ↓0 ↑0 ═════════════════════════════════════════╝
╭ W3 [3.1: ui] ────────────────────────────────────────────╮╭ W4 [4.1: db] ────────────────────────────────────────────╮
│◉ verify                                                  ││⊕ merging                                                 │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
╰ $0.0000 │ ↓0 ↑0 ─────────────────────────────────────────╯╰ $0.0000 │ ↓0 ↑0 ─────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 [███████░░░░░░░░░░░░░] 3/8 (37%) │ $0.0842 │ $0.0281/task │ ⏱ 2m25s │ W 4/4
 Queue: 1 ready │ 4 wip │ 0 blocked │ 0 pending  │  Focus: W2    q Tab ↑↓ Esc p=tasks r=reload R=restart
