src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__dashboard__tests__snapshot_grid_terminal_200x60.snap
---
source: src/commands/task/orchestrate/dashboard.rs
expression: snapshot
---
╭ W1 [1.1: api] ──────────────────────────────────────────────────╮╭ W2 [2.1: core] ────────────────────────────────────────────────╮╔ ▶ W3 [3.1: ui] ═════════════════════════════════════════════════╗
│● implement                                                      ││◎ review+fix                                                    │║◉ verify                                                         ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
│                                                                 ││                                                                │║                                                                 ║
╰ $0.0000 │ ↓0 ↑0 ────────────────────────────────────────────────╯╰ $0.0000 │ ↓0 ↑0 ───────────────────────────────────────────────╯╚ $0.0000 │ ↓0 ↑0 ════════════════════════════════════════════════╝
╭ W4 [4.1: db] ───────────────────────────────────────────────────╮╭ W5 [5.1: auth] ────────────────────────────────────────────────╮╭ W6 [6.1: config] ───────────────────────────────────────────────╮
│⊕ merging                                                        ││⚙ setup                                                         ││⚡ resolving conflicts                                           │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
│                                                                 ││                                                                ││                                                                 │
╰ $0.0000 │ ↓0 ↑0 ────────────────────────────────────────────────╯╰ $0.0000 │ ↓0 ↑0 ───────────────────────────────────────────────╯╰ $0.0000 │ ↓0 ↑0 ────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 [██████░░░░░░░░░░░░░░] 5/15 (33%) │ $0.0842 │ $0.0168/task │ ⏱ 2m25s │ W 6/6
 Queue: 4 ready │ 6 wip │ 0 blocked │ 0 pending  │  Focus: W3    q Tab ↑↓ Esc p=tasks r=reload R=restart
