src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__dashboard__tests__snapshot_grid_terminal_80x24.snap
---
source: src/commands/task/orchestrate/dashboard.rs
expression: snapshot
---
╔ ▶ W1 [1.1: api] ═════════════════════╗╭ W2 [2.1: core] ──────────────────────╮
║● implement                           ║│◎ review+fix                          │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
║                                      ║│                                      │
╚ $0.0000 │ ↓0 ↑0 ═════════════════════╝╰ $0.0000 │ ↓0 ↑0 ─────────────────────╯
╭ W3 [3.1: ui] ────────────────────────────────────────────────────────────────╮
│◉ verify                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰ $0.0000 │ ↓0 ↑0 ─────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────
 [██████░░░░░░░░░░░░░░] 2/6 (33%) │ $0.0842 │ $0.0421/task │ ⏱ 2m25s │ W 3/3
 Queue: 1 ready │ 3 wip │ 0 blocked │ 0 pending  │  Focus: W1    q Tab ↑↓ Esc p=
