src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__dashboard__tests__snapshot_grid_with_status_bar.snap
---
source: src/commands/task/orchestrate/dashboard.rs
expression: snapshot
---
╭ W1 [1.1: api] ─────────────────────────────────╮╭ W2 [2.1: core] ────────────────────────────────╮
│● implement                                     ││● implement                                     │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
╰ $0.0000 │ ↓0 ↑0 ───────────────────────────────╯╰ $0.0000 │ ↓0 ↑0 ───────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────────────────────────
 [███████░░░░░░░░░░░░░] 3/8 (37%) │ $1.2345 │ $0.4115/task │ ⏱ 2m25s │ W 2/3
 Queue: 0 ready │ 2 wip │ 1 blocked │ 2 pending  │  No focus    q Tab ↑↓ Esc p=tasks r=reload R=rest
