src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__dashboard__tests__snapshot_tab_bar_1_worker.snap
---
source: src/commands/task/orchestrate/dashboard.rs
expression: snapshot
---
 W1
╔ ▶ W1 [1.1: api] ═════════════════════════════════════════════════════════════╗
║● implement                                                                   ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
╚ $0.0000 │ ↓0 ↑0 ═════════════════════════════════════════════════════════════╝
 1/5 (20%) │ $0.0842 │ ⏱ 2m25s  q=quit Tab=switch p=tasks
