src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__dashboard__tests__snapshot_tab_bar_mixed_states.snap
---
source: src/commands/task/orchestrate/dashboard.rs
expression: snapshot
---
 W1   W2   W6
╔ ▶ W2 [2.1: core] ════════════════════════════════════════════════════════════╗
║● implement                                                                   ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
║                                                                              ║
╚ $0.0000 │ ↓0 ↑0 ═════════════════════════════════════════════════════════════╝
 2/10 (20%) │ $0.0842 │ ⏱ 2m25s  q=quit Tab=switch p=tasks
