src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__dashboard__tests__snapshot_tab_bar_overflow_narrow_terminal.snap
---
source: src/commands/task/orchestrate/dashboard.rs
expression: snapshot
---
 W1   W2   W3   W4   W5   W6
╔ ▶ W3 [1.1: api] ═══════════╗
║● implement                 ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
╚ $0.0000 │ ↓0 ↑0 ═══════════╝
 2/12 (16%) │ $0.0842 │ ⏱ 2m25
